--- a/examples/tutorials/visualising_the_results.ipynb
+++ b/examples/tutorials/visualising_the_results.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove 'visualising_the_results/*': No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "! rm visualising_the_results/*"
    ]
@@ -20,9 +28,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20:21 bilby INFO    : Waveform generator initiated with\n",
+      "  frequency_domain_source_model: bilby.gw.source.lal_binary_black_hole\n",
+      "  time_domain_source_model: None\n",
+      "  parameter_conversion: bilby.gw.conversion.convert_to_lal_binary_black_hole_parameters\n",
+      "20:21 bilby INFO    : No power spectral density provided, using aLIGO,zero detuning, high power.\n",
+      "20:21 bilby INFO    : Injected signal in H1:\n",
+      "20:21 bilby INFO    :   optimal SNR = 120.28\n",
+      "20:21 bilby INFO    :   matched filter SNR = 119.95+0.65j\n",
+      "20:21 bilby INFO    :   mass_1 = 36.0\n",
+      "20:21 bilby INFO    :   mass_2 = 29.0\n",
+      "20:21 bilby INFO    :   a_1 = 0.4\n",
+      "20:21 bilby INFO    :   a_2 = 0.3\n",
+      "20:21 bilby INFO    :   tilt_1 = 0.5\n",
+      "20:21 bilby INFO    :   tilt_2 = 1.0\n",
+      "20:21 bilby INFO    :   phi_12 = 1.7\n",
+      "20:21 bilby INFO    :   phi_jl = 0.3\n",
+      "20:21 bilby INFO    :   luminosity_distance = 200.0\n",
+      "20:21 bilby INFO    :   theta_jn = 0.4\n",
+      "20:21 bilby INFO    :   phase = 1.3\n",
+      "20:21 bilby INFO    :   ra = 1.375\n",
+      "20:21 bilby INFO    :   dec = -1.2108\n",
+      "20:21 bilby INFO    :   geocent_time = 1126259642.413\n",
+      "20:21 bilby INFO    :   psi = 2.659\n",
+      "20:21 bilby INFO    : Running for label 'example', output will be saved to 'visualising_the_results'\n",
+      "20:21 bilby INFO    : Using lal version 7.2.4\n",
+      "20:21 bilby INFO    : Using lal git version Branch: None;Tag: lalsuite-v7.11;Id: 7a2f2aa176ad39eeaede38f6df4a41d6bf226e8f;;Builder: Unknown User <>;Repository status: CLEAN: All modifications committed\n",
+      "20:21 bilby INFO    : Using lalsimulation version 4.0.2\n",
+      "20:21 bilby INFO    : Using lalsimulation git version Branch: None;Tag: lalsuite-v7.11;Id: 7a2f2aa176ad39eeaede38f6df4a41d6bf226e8f;;Builder: Unknown User <>;Repository status: CLEAN: All modifications committed\n",
+      "20:21 bilby INFO    : Analysis priors:\n",
+      "20:21 bilby INFO    : mass_1=Uniform(minimum=20, maximum=50, name='mass_1', latex_label='$m_1$', unit=None, boundary=None)\n",
+      "20:21 bilby INFO    : mass_2=Uniform(minimum=20, maximum=50, name='mass_2', latex_label='$m_2$', unit=None, boundary=None)\n",
+      "20:21 bilby INFO    : luminosity_distance=Uniform(minimum=100, maximum=300, name='luminosity_distance', latex_label='$d_L$', unit=None, boundary=None)\n",
+      "20:21 bilby INFO    : a_1=0.4\n",
+      "20:21 bilby INFO    : a_2=0.3\n",
+      "20:21 bilby INFO    : tilt_1=0.5\n",
+      "20:21 bilby INFO    : tilt_2=1.0\n",
+      "20:21 bilby INFO    : phi_12=1.7\n",
+      "20:21 bilby INFO    : phi_jl=0.3\n",
+      "20:21 bilby INFO    : theta_jn=0.4\n",
+      "20:21 bilby INFO    : phase=1.3\n",
+      "20:21 bilby INFO    : ra=1.375\n",
+      "20:21 bilby INFO    : dec=-1.2108\n",
+      "20:21 bilby INFO    : geocent_time=1126259642.413\n",
+      "20:21 bilby INFO    : psi=2.659\n",
+      "20:21 bilby INFO    : Analysis likelihood class: <class 'bilby.gw.likelihood.base.GravitationalWaveTransient'>\n",
+      "20:21 bilby INFO    : Analysis likelihood noise evidence: -11304.422438181657\n",
+      "20:21 bilby INFO    : Single likelihood evaluation took 2.449e-02 s\n",
+      "20:21 bilby INFO    : Using sampler Dynesty with kwargs {'nlive': 100, 'bound': 'multi', 'sample': 'rwalk', 'periodic': None, 'reflective': None, 'update_interval': None, 'first_update': None, 'npdim': None, 'rstate': None, 'queue_size': 1, 'pool': None, 'use_pool': None, 'live_points': None, 'logl_args': None, 'logl_kwargs': None, 'ptform_args': None, 'ptform_kwargs': None, 'gradient': None, 'grad_args': None, 'grad_kwargs': None, 'compute_jac': False, 'enlarge': None, 'bootstrap': None, 'walks': 5, 'facc': 0.2, 'slices': None, 'fmove': 0.9, 'max_move': 100, 'update_func': None, 'ncdim': None, 'blob': False, 'save_history': False, 'history_filename': None, 'maxiter': None, 'maxcall': None, 'dlogz': 0.1, 'logl_max': inf, 'n_effective': None, 'add_live': True, 'print_progress': True, 'print_func': <bound method Dynesty._print_func of <bilby.core.sampler.dynesty.Dynesty object at 0x7f6a059138b0>>, 'save_bounds': False, 'checkpoint_file': None, 'checkpoint_every': 60, 'resume': False}\n",
+      "20:21 bilby INFO    : Checkpoint every check_point_delta_t = 600s\n",
+      "20:21 bilby INFO    : Using dynesty version 2.0.3\n",
+      "20:21 bilby INFO    : Using the bilby-implemented rwalk sample method with ACT estimated walks\n",
+      "20:21 bilby INFO    : Resume file visualising_the_results/example_resume.pickle does not exist.\n",
+      "20:21 bilby INFO    : Generating initial points from the prior\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3abef2685ff1483e8afa09549cbe6994",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "1it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20:31 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:786: UserWarning: Attempting to set identical bottom == top == 0.0 results in singular transformations; automatically expanding.\n",
+      "  ax.set_ylim([0., max(y0) * 1.05])\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:786: UserWarning: Attempting to set identical bottom == top == 0.0 results in singular transformations; automatically expanding.\n",
+      "  ax.set_ylim([0., max(y0) * 1.05])\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "20:31 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "20:31 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "20:41 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "20:41 bilby WARNING : singular matrix\n",
+      "20:41 bilby WARNING : Failed to create dynesty state plot at checkpoint\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "20:41 bilby WARNING : singular matrix\n",
+      "20:41 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "20:52 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "20:52 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "20:52 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "21:02 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "21:02 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "21:02 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "21:12 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "21:12 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "21:12 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "21:22 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "21:22 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "21:22 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "21:33 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "21:33 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "21:33 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "21:43 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "21:43 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "21:43 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "21:53 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "21:53 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "21:53 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "22:03 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "22:03 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "22:03 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "22:11 bilby INFO    : Written checkpoint file visualising_the_results/example_resume.pickle\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:252: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(logwt), logz if logplot else np.exp(logz)\n",
+      "/home/useradd/anaconda3/envs/py39/lib/python3.9/site-packages/dynesty/plotting.py:282: RuntimeWarning: overflow encountered in exp\n",
+      "  zspan = (0., 1.05 * np.exp(logz[-1] + 3. * logzerr[-1]))\n",
+      "22:11 bilby WARNING : Axis limits cannot be NaN or Inf\n",
+      "22:11 bilby WARNING : Failed to create dynesty run plot at checkpoint\n",
+      "22:11 bilby INFO    : Sampling time: 1:49:54.788549\n",
+      "22:11 bilby INFO    : Summary of results:\n",
+      "nsamples: 1968\n",
+      "ln_noise_evidence: -11304.422\n",
+      "ln_evidence: -4125.909 +/-  0.448\n",
+      "ln_bayes_factor: 7178.514 +/-  0.448\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import bilby\n",
     "import matplotlib.pyplot as plt\n",
@@ -276,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py39",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +473,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ce95bca6af9915c87af1d7884c75225323533e32849729132b38f7ef50387511"
+   }
   }
  },
  "nbformat": 4,
