--- a/MyStuff/Try.ipynb
+++ b/MyStuff/Try.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "BG =  #get background noise\n",
-    "teta = #get injection parmeter"
+    "teta = #get injection parmeter\n",
+    "#Testing git"
    ]
   },
   {
