--- a/examples/tutorials/visualising_the_results.ipynb
+++ b/examples/tutorials/visualising_the_results.ipynb
@@ -152,6 +152,7 @@
     "    outdir=outdir,\n",
     "    label=label,\n",
     "    sample=\"unif\",\n",
+    "    result_class=bilby.gw.result.CBCResult,\n",
     ")"
    ]
   },
@@ -304,7 +305,15 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "",
+   "name": ""
+  },
+  "language_info": {
+   "name": ""
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
