Add installation of memspectrum

--- a/examples/tutorials/power_spectral_density_estimation.ipynb
+++ b/examples/tutorials/power_spectral_density_estimation.ipynb
@@ -496,6 +496,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install memspectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def estimate_psd_memspectrum(\n",
     "    psd_data,\n",
     "    mesa_solve_kwargs=None,\n",
